--- a/ansible/roles/hibernation/tasks/main.yml
+++ b/ansible/roles/hibernation/tasks/main.yml
@@ -1,15 +1,11 @@
 ---
-- ansible.builtin.include_role:
+- name: "Include role: swap"
+  ansible.builtin.include_role:
     name: swap
 
 - name: Configure system to minimize hibernation image size
-  become: yes
+  become: true
   ansible.builtin.copy:
     dest: /etc/tmpfiles.d/hibernation_image_size.conf
     src: hibernation_image_size.conf
-
-- ansible.builtin.include_role:
-    name: kernel
-
-- ansible.builtin.include_role:
-    name: systemd-boot
+    mode: "0644"
