--- a/ansible/roles/dev_tools/tasks/docker.yml
+++ b/ansible/roles/dev_tools/tasks/docker.yml
@@ -1,22 +1,22 @@
 ---
 - name: Install docker
-  become: yes
-  community.general.pacman:
+  become: true
+  ansible.builtin.package:
     pkg:
       - docker
       - docker-compose
 
-- name: "Add user {{ username }} to 'docker' group"
-  become: yes
+- name: "Add current user to 'docker' group: ({{ username }})"
+  become: true
   ansible.builtin.user:
     name: "{{ username }}"
     groups:
       - docker
-    append: yes
+    append: true
 
 - name: Start/Enable docker systemd service
-  become: yes
+  become: true
   ansible.builtin.systemd:
     name: docker.service
     state: started
-    enabled: yes
+    enabled: true
