--- a/ansible/roles/systemd_boot/tasks/microcode.yml
+++ b/ansible/roles/systemd_boot/tasks/microcode.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install intel microcode
-  become: yes
-  community.general.pacman:
+  become: true
+  ansible.builtin.package:
     pkg: intel-ucode
   when: "has_intel_cpu"
   notify:
