--- a/ansible/roles/themes/tasks/main.yml
+++ b/ansible/roles/themes/tasks/main.yml
@@ -2,19 +2,10 @@
 - name: Install nordic gtk3 theme
   kewlfft.aur.aur:
     name: nordic-theme
-  become: yes
+  become: true
   become_user: aur_builder
 
 - name: Install papirus icon theme
-  become: yes
-  community.general.pacman:
+  become: true
+  ansible.builtin.package:
     pkg: papirus-icon-theme
-#- name: Create gtk3 settings directory
-#  ansible.builtin.file:
-#    path: "~/.config/gtk-3.0"
-#    state: directory
-#
-#- name: Copy gtk3 settings
-#  ansible.builtin.copy:
-#    dest: "~/.config/gtk-3.0/settings.ini"
-#    src: "gtk-3.0/settings.ini"
