--- a/ansible/roles/xdg_user_dirs/vars/main.yml
+++ b/ansible/roles/xdg_user_dirs/vars/main.yml
@@ -2,8 +2,8 @@
 user_dirs:
   XDG_DESKTOP_DIR: "$HOME/Schreibtisch"
   XDG_DOWNLOAD_DIR: "$HOME/Downloads"
-  XDG_TEMPLATES_DIR: "$HOME"
-  XDG_PUBLICSHARE_DIR: "$HOME"
+  XDG_TEMPLATES_DIR: "$HOME/"
+  XDG_PUBLICSHARE_DIR: "$HOME/"
   XDG_DOCUMENTS_DIR: "$HOME/Dokumente"
   XDG_MUSIC_DIR: "$HOME/Musik"
   XDG_PICTURES_DIR: "$HOME/Bilder"
