--- a/ansible/roles/yay/tasks/main.yml
+++ b/ansible/roles/yay/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
-- import_tasks: create_aur_builder_user.yml
+- name: Ensure user aur_builder exists
+  ansible.builtin.import_tasks: create_aur_builder_user.yml
 
 - name: Install yay
   kewlfft.aur.aur:
     name: yay
     use: makepkg
     state: present
-  become: yes
+  become: true
   become_user: aur_builder
